Implement CypherNodePropertyExporter as EE feature